<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="200"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_Logout"
        android:orderInCategory="300"
        android:title="@string/action_Logout"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_My_Profile"
        android:orderInCategory="100"
        android:title="@string/action_My_Profile"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search"
        android:title="Search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView"
         />

</menu>
