<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.radwan1311.salahly.ProfileActivity">

    <ImageView
        android:id="@+id/profileImage"
        android:layout_width="111dp"
        android:layout_height="120dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="32dp"
        android:scaleType="fitXY"
        android:src="@drawable/com_facebook_profile_picture_blank_square"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/profileName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="155dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="176dp"
        android:text="@string/userProfileName"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/profileCity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="45dp"
        android:text="@string/userProfileCity"
        android:textColor="@android:color/black"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/EditProfile" />

    <TextView
        android:id="@+id/profilePhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/userProfilePhone"
        android:textColor="@android:color/black"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/profileCity" />

    <TextView
        android:id="@+id/profileAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/userProfileAddress"
        android:textColor="@android:color/black"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/textView10"
        app:layout_constraintTop_toBottomOf="@+id/profilePhone" />



    <TextView
        android:id="@+id/Profilejob"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="155dp"
        android:layout_marginTop="8dp"
        android:text="@string/userProfileJob"
        android:textColor="@android:color/black"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profileName" />

    <TextView
        android:id="@+id/EditProfile"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/userEditProfileCard"
        android:textColor="#5C05F8"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/profileImage"
        app:layout_constraintStart_toStartOf="@+id/profileImage"
        app:layout_constraintTop_toBottomOf="@+id/profileImage" />

    <TextView
        android:id="@+id/workImagesText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="170dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="180dp"
        android:text="@string/userWorkImages"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profileAddress" />

    <ImageView
        android:id="@+id/ProfileWorkImage1"
        android:layout_width="74dp"
        android:layout_height="72dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/workImagesText"
        app:srcCompat="@android:drawable/ic_menu_gallery" />

    <ImageView
        android:id="@+id/editProfileWorkImage3"
        android:layout_width="74dp"
        android:layout_height="72dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/workImagesText"
        app:srcCompat="@android:drawable/ic_menu_gallery" />

    <ImageView
        android:id="@+id/editProfileWorkImage2"
        android:layout_width="74dp"
        android:layout_height="72dp"
        android:layout_marginStart="55dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="55dp"
        app:layout_constraintEnd_toStartOf="@+id/editProfileWorkImage3"
        app:layout_constraintStart_toEndOf="@+id/ProfileWorkImage1"
        app:layout_constraintTop_toBottomOf="@+id/workImagesText"
        app:srcCompat="@android:drawable/ic_menu_gallery" />

    <Button
        android:id="@+id/NoCardbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="150dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="150dp"
        android:text="@string/userCreateCard"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/NoCardView" />

    <TextView
        android:id="@+id/NoCardView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="155dp"
        android:layout_marginTop="300dp"
        android:layout_marginEnd="180dp"
        android:text="@string/YouHaveNoInformationYetPleaseCreateYourFirstCard"
        android:textColor="@android:color/black"
        android:textSize="12dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.457"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="45dp"
        android:textColor="@android:color/black"
        android:textSize="14sp"
        android:text="@string/City2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EditProfile" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:textSize="14sp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="20dp"
        android:text="@string/Phone2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="20dp"
        android:text="@string/Address2"
        android:textColor="@android:color/black"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />
</android.support.constraint.ConstraintLayout>