<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    app:cardElevation="4dp"
    app:cardCornerRadius="8dp"
    >
<LinearLayout
    android:layout_margin="5dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

        <ImageView
            android:id="@+id/ScardViewProfile_image"
            android:layout_width="80dp"
            android:layout_height="90dp"
            android:layout_margin="8dp"
            android:layout_marginTop="8dp"
            />

    <LinearLayout
        android:layout_width="150dp"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ScardViewName"
            android:layout_marginTop="12dp"
            android:text="@string/name"
            android:textColor="@android:color/black"
            android:textSize="11dp"
            android:textStyle="bold"

            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ScardViewJob"
            android:layout_marginTop="12dp"
            android:text="@string/job"
            android:textColor="@android:color/black"
            android:textSize="9dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ScardViewPhone"
            android:layout_marginTop="10dp"
            android:text="@string/Phone"
            android:textColor="@android:color/black"
            android:textSize="9dp"
            android:textStyle="bold" />


    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/ScardViewCity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/City"
            android:layout_marginTop="20dp"
            android:textColor="@android:color/black"
            android:textSize="9dp"
            android:textStyle="bold"
            android:layout_marginBottom="10dp"
            />

        <Button
            android:id="@+id/ScardViewProfileButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ViewProfile"
            android:textColor="@android:color/black"
            android:textSize="8dp"
            android:textStyle="bold" />


    </LinearLayout>

</LinearLayout>
</android.support.v7.widget.CardView>
