<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.radwan1311.salahly.EditUserProfile">

    <TextView
        android:id="@+id/profiletext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="176dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="176dp"
        android:text="@string/EditUserProfileText"
        android:textColor="@android:color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/EditProfileName"
        android:layout_width="160dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="100dp"
        android:ems="10"
        android:hint="@string/editUsername"
        android:inputType="textPersonName"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/EditProfilePhoneNumber"
        android:layout_width="160dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:hint="@string/editPhoneNumber"
        android:inputType="textPersonName"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EditProfileName" />

    <EditText
        android:id="@+id/EditProfileJobDiscription"
        android:layout_width="160dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:hint="@string/editJobDiscription"
        android:inputType="textPersonName"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EditProfilePhoneNumber" />

    <ImageView
        android:id="@+id/EditProfileImage"
        android:layout_width="148dp"
        android:layout_height="148dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="50dp"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/EditProfileName"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/com_facebook_profile_picture_blank_square" />

    <EditText
        android:id="@+id/EditProfileCity"
        android:layout_width="134dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/editCity"
        android:inputType="textPersonName"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EditProfileJobDiscription" />

    <EditText
        android:id="@+id/EditProfileAddress"
        android:layout_width="194dp"
        android:layout_height="40dp"
        android:layout_marginStart="26dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="22dp"
        android:ems="10"
        android:hint="@string/editAdress"
        android:inputType="textPersonName"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/EditProfileCity"
        app:layout_constraintTop_toBottomOf="@+id/EditProfileImage" />

    <Button
        android:id="@+id/EditProfileBackButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="106dp"
        android:layout_marginEnd="38dp"
        android:layout_marginBottom="30dp"
        android:text="@string/editBACK"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/EditProfileSaveButton"
        app:layout_constraintHorizontal_bias="0.714"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/EditProfileSaveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="84dp"
        android:layout_marginBottom="30dp"
        android:text="@string/editSAVE"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/workImagesText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="176dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="176dp"
        android:text="@string/editEditWorkImages"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resetPas" />

    <ImageView
        android:id="@+id/editProfileWorkImage1"
        android:layout_width="74dp"
        android:layout_height="72dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/workImagesText"
        app:srcCompat="@android:drawable/ic_menu_gallery" />

    <ImageView
        android:id="@+id/editProfileWorkImage3"
        android:layout_width="74dp"
        android:layout_height="72dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/workImagesText"
        app:srcCompat="@android:drawable/ic_menu_gallery" />

    <ImageView
        android:id="@+id/editProfileWorkImage2"
        android:layout_width="74dp"
        android:layout_height="72dp"
        android:layout_marginStart="55dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="55dp"
        app:layout_constraintEnd_toStartOf="@+id/editProfileWorkImage3"
        app:layout_constraintStart_toEndOf="@+id/editProfileWorkImage1"
        app:layout_constraintTop_toBottomOf="@+id/workImagesText"
        app:srcCompat="@android:drawable/ic_menu_gallery" />

    <TextView
        android:id="@+id/resetPas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="5dp"
        android:text="@string/editResetForgetPassword"
        android:textColor="#5C05F8"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EditProfileCity" />


</android.support.constraint.ConstraintLayout>