<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:background="#5C05F8"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <ImageView
        android:id="@+id/workPhoto1"
        android:layout_width="254dp"
        android:layout_height="66dp"
        android:contentDescription="@string/nav_header_desc"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/logo2" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:text="@string/Salahly"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="#F2FB04"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/AllYouNeedInOnePlace"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="#F2FA07"
        android:textStyle="bold" />

</LinearLayout>
