<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background = "#5C05F8"
    tools:context="com.radwan1311.salahly.ForgetPassword">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="6dp"
        android:text="@string/ForgetPassword"
        android:textColor="#FCFCFC"
        android:textSize="30dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/PasswordResetButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/ResetPassword"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/PasswordResetEmail"
        app:layout_constraintTop_toBottomOf="@+id/PasswordResetEmail" />

    <EditText
        android:id="@+id/PasswordResetEmail"
        android:layout_width="255dp"
        android:layout_height="32dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="120dp"
        android:background="#FCFCFC"
        android:ems="10"
        android:hint="@string/YourRegisteredEmail"
        android:inputType="textEmailAddress"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</android.support.constraint.ConstraintLayout>